k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: fraud-app
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: fraud-detection-app
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: fraud-detection-app
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: fraud-detection-app
    weight: 100
  wildcardPolicy: None
